# SSL-TP-Bolsar

./: .gitignore  CMakeLists.txt  README.md  SSL_TP_Bolsar  a.out  makefile_custom.sh
cmakeMingw/: mingw-w64-x86_64.cmake
commands/: wget
doc/Casos de uso/: lideres_bcba_result.csv  lideres_bcba_result.html
resources/: config.properties
src/: compile.sh  executable  main.c  makefile.sh
src/lib/config/: config.c  config.h
src/lib/data/: data.c  data.h  datafile.c  dataonline.c  datatypes.h
src/lib/domain/: leader.h
src/lib/exporter/: exporter.c  exporter.h  exporter_csv.c  exporter_html.c  exporter_stdout.c  exportertypes.h
src/lib/extractor/: extractor.c  extractor.h  extractorhtml.c  extractortypes.h
src/lib/filter/: filter.h  filterleader.c
src/lib/formatter/: formatter.h  formatterhtml.c  formattertypes.h
src/lib/logging/: logging.c  logging.h
src/lib/parser/: parser.c  parser.h  parserhtml.c  parsertypes.h
src/lib/preferences/: preferences.c
src/lib/processor/: processor.c  processor.h  processortypes.h
src/lib/ui/: ui.c  ui.h
src/lib/utils/: commons.c  commons.h
src/libs/config/: config.c  config.h
src/libs/data/: data.c  data.h  data_file.c  data_online.c  datafile.c  dataonline.c  datatypes.h
src/libs/domain/: leader.h
src/libs/exporter/: exporter.c  exporter.h  exporter_csv.c  exporter_csv_leader.c  exporter_html.c  exporter_html_leader.c  exporter_stdout.c  exporter_stdout_leader.c  exportertypes.h
src/libs/filter/: filter.h  filter_leader.c  filterleader.c
src/libs/formatter/: formatter.h  formatter_leader.c  formatterleader.c  formattertypes.h
src/libs/logging/: logging.c  logging.h
src/libs/parser/: parser.c  parser.h  parser_html.c  parser_leader.c  parserhtml.c  parsertypes.h
src/libs/preferences/: preferences.c  preferences.h
src/libs/processor/: processor.c  processor.h  processortypes.h
src/libs/ui/: ui.c  ui.h
src/libs/utils/: commons.c  commons.h  csv_writer.c  csv_writer.h  html_writer.c  html_writer.h
src/resources/: lideres_bcba.csv  lideres_bcba.html  lideres_bcba_result.csv  lideres_bcba_result.html  lideres_limpio_formateado.html
